--- a/app/src/main/res/layout/fragment_vehicle_list.xml
+++ b/app/src/main/res/layout/fragment_vehicle_list.xml
@@ -10,5 +10,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:rrvLayoutType="LinearLayout"
-        app:rrvSwipeToDelete="false"/>
+        app:rrvSwipeToDelete="true"/>
 </FrameLayout>
